fixed layout spacing issue on speakers list page

--- a/css/scaleconf2013.css
+++ b/css/scaleconf2013.css
@@ -465,7 +465,8 @@ li.box {
 .caption li {
     font-family: Quicksand, Arial, Helvetica, sans-serif;
     list-style: none;
-    padding-bottom: 14px;
+    height: 90px;
+
 }
 
 .caption li.twitter  {
